# jonathansm

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile  README.md  contact.html  index.html  justfile  style.css  working.html
.cargo/: config.toml
.sqlx/: query-53c11732f5439845653ffdee7e85dbe12261ea2ea8c15a94776fc62a436a5f46.json  query-7018d5bda05a023eaa82e2e272f5b71d51f3f11c49dc1d014f6c24fc8fcf3e3c.json  query-7455bbc276d11ebf7eb97e66ef0c5025beab47a47d52eaa069df7fb57eefc258.json  query-9332c6db52828c701c28517059715838a2d556a487837da42131efa9abcbb42b.json  query-9e7a7306b0a872eec5e62348a1fbd806e1ca4546b4574690db71632ba1a349fc.json  query-a5e939f56c62e8e27191d8db43e534134052d1eb5757cf687ab89aa0116a61f8.json  query-bd24ee434a799dc4950ca959e788a9a9aa3fcaaa83831ef651b4541040f9364f.json  query-c418e571d48bccfd1e49924b3961ccb13e6b4063d705275a8a3490c7c8417aff.json  query-dbbf42a26277561dfe02498a3935889460d42d2eb3df6aabd976f7de19ef641f.json  query-dc4185d0866b317f22fdb6ac1ff03c6c8c0c6275ddd153ab9e8efb31d2c47bce.json  query-fd9eb7b3d5abb00dc78483533c43f2b560bbdfcb2385ae9b52cecb60129bfd66.json
.well-known/: nostr.json
src/: app.rs  db.rs  main.rs  post.rs  routes.rs  rss.rs
src/services/: image.rs  mod.rs  post.rs  search.rs  search_query.rs
static/css/: style.css
templates/: base.html  index.html  macros.html  post.html  posts.html  search.html
templates/partial/: commits.html  link.html  post.html  quote.html
