[package]
name = "jonathansm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.7.7"
axum-embed = "0.1.0"
build_id = { git = "https://github.com/realprogrammersusevim/build_id.git" }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
include_dir = "0.7.4"
lazy_static = "1.5.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.30.0", features = ["bundled"] }
regex = "1.11.1"
rusqlite = { version = "0.36.0", features = ["bundled", "unlock_notify"] }
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
tera = "1.20.0"
tokio = { version = "1.43.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
